[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Proyectiles/Canion.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/Proyectil.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Proyectiles/DisparoPlayer.ogg" type="AudioStream" id=3]

[node name="Canion" type="Node2D"]
script = ExtResource( 1 )
proyectil = ExtResource( 2 )
cadencia_disparo = 0.25
velocidad_proyectil = 1600

[node name="PuntoIzquierdo" type="Position2D" parent="."]
position = Vector2( 0, 6 )

[node name="PuntoDerecho" type="Position2D" parent="."]
position = Vector2( 0, -6 )

[node name="DisparoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="TimerEnfriamiento" type="Timer" parent="."]

[connection signal="timeout" from="TimerEnfriamiento" to="." method="_on_TimerEnfriamiento_timeout"]
